tests/profile/error/camera/navstate_wrongtype_up.profile
{
  "version": { "major": 12, "minor": 13 },
  "camera": {
    "type": "setNavigationState",
    "anchor": "none",
    "aim": "aim",
    "frame": "root",
    "position": { "x": 1.0, "y": 2.0, "z": 3.0},
    "up": "a",
    "yaw": 10.0,
    "pitch": -10.0
  }
}
